replaced deprecated code; fixes #26681