@@ -686,7 +686,7 @@ public final class FileTools {
         if (urlStringLocal.contains(":")) {
             try {
                 // logger.trace("url string: {}", urlString); //NOSONAR Debug
-                URL url = new URL(urlStringLocal);
+                URL url = new URI(urlStringLocal).toURL();
                 URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(),
                         url.getQuery(), url.getRef());
                 if (urlStringLocal.endsWith("/") && Paths.get(uri.getPath()).getFileName().toString().contains(".")) {
